feat: Finalizando landing page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,21 @@
 @import "./core.css";
 
+* {
+  font-family: 'Jaldi', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
+  font-family: 'Jaldi', sans-serif;
   background-color: #f4f4f4;
   color: #333;
+  width: 100vw;
+  height: 100vh;
 }
 
 /* Cabeçalho */
@@ -39,11 +45,17 @@ nav ul {
 nav a {
   text-decoration: none;
   color: var(--Verde-900);
+  font-size: 1.2em;
   font-weight: 700;
+}
+
+nav a:hover {
+  color: var(--Verde-700);
 }
 
 .btn-acessar-conta {
   background-color: var(--Verde-900);
+  font-size: 1.2em;
   color: var(--Branco);
   padding: .25rem .75rem;
   border: none;
@@ -54,6 +66,7 @@ nav a {
 
 .btn-abrir-conta {
   background-color: var(--Verde-700);
+  font-size: 1.2em;
   color: var(--Branco);
   padding: .5rem;
   border: none;
@@ -115,69 +128,29 @@ nav a {
   font-weight: 300;
 }
 
-/* Seção Limite */
-.limite {
-  text-align: center;
-  padding: 50px 20px;
-}
-
-.limite h2 {
-  font-size: 2em;
-  /* Tamanho da fonte do título */
-  color: #4CAF50;
-  /* Cor verde do título */
-}
-
-/* Seção Vantagens */
-.vantagens {
-  background-color: #4CAF50;
-  /* Cor de fundo verde */
-  color: white;
-  padding: 50px 20px;
-  text-align: center;
-}
-
-.vantagem {
-  display: flex;
-  /* Alinha os elementos da vantagem */
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.vantagem img {
-  height: 50px;
-  margin-right: 20px;
-}
-
 /* Seção Serviços */
-.services {
-  padding: 40px 80px;
-  background-color: #f9f9f9;
-}
 
-.services h2 {
-  text-align: center;
-  font-size: 2.5em;
-  color: #333;
-  margin-bottom: 40px;
-}
-
-.service {
+.section-title {
+  background-color: var(--Verde-700);
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  padding: 2rem;
 }
 
-.service .content {
-  flex: 1;
-  padding-right: 20px;
+.section-title h2 {
+  color: var(--Branco);
+  font-weight: bold;
+}
+
+.services {
+  background-color: #f9f9f9;
 }
 
 .service h3 {
   font-size: 2em;
-  color: #007BFF;
-  margin-bottom: 10px;
+  color: var(--Verde-900);
+  font-weight: bold;
 }
 
 .service p {
@@ -186,26 +159,25 @@ nav a {
   margin-bottom: 20px;
 }
 
-.service .image {
-  flex: 1;
-  text-align: center;
+.vantagem-img {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-.service .image img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 10px;
+.img-layer {
+  position: fixed;
+  z-index: 1;
+  background-color: var(--Verde-200);
+  opacity: .2;
 }
 
-.service:nth-child(even) {
-  flex-direction: row-reverse;
+p {
+  font-size: 1.2em;
+  line-height: 1.15;
 }
 
-
-/* Rodapé */
 footer {
-  background-color: #333;
-  /* Cor de fundo escura */
   color: white;
   padding: 20px;
   text-align: center;
@@ -227,4 +199,8 @@ footer {
 footer p {
   padding: 0;
   margin: 0;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
