--- a/src/styles.css
+++ b/src/styles.css
@@ -21,21 +21,15 @@ body {
 /* Cabeçalho */
 header {
   background-color: #fff;
-  /* Fundo branco */
   padding: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  /* Sombra sutil */
+  box-shadow: 0 2px 5px #0000001a;
   display: flex;
-  /* Para alinhar logo e menu */
   justify-content: space-between;
-  /* Espaçamento entre logo e menu */
   align-items: center;
-  /* Alinhamento vertical */
 }
 
 header img {
   height: 50px;
-  /* Altura da logo */
 }
 
 nav ul {
@@ -51,6 +45,10 @@ nav a {
 
 nav a:hover {
   color: var(--Verde-700);
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .btn-acessar-conta {
@@ -90,13 +88,7 @@ nav a:hover {
 
 .hero h1 {
   font-size: 3em;
-  /* Tamanho da fonte do título */
   margin-bottom: 20px;
-}
-
-.benefits {
-  padding: 40px 80px;
-  background-color: #f9f9f9;
 }
 
 
@@ -165,13 +157,6 @@ nav a:hover {
   position: relative;
 }
 
-.img-layer {
-  position: fixed;
-  z-index: 1;
-  background-color: var(--Verde-200);
-  opacity: .2;
-}
-
 p {
   font-size: 1.2em;
   line-height: 1.15;
@@ -181,26 +166,10 @@ footer {
   color: white;
   padding: 20px;
   text-align: center;
-}
-
-.app-stores {
-  margin-top: 20px;
-}
-
-.app-stores img {
-  height: 40px;
-  margin: 0 10px;
-}
-
-footer {
   background-color: var(--Verde-700);
 }
 
 footer p {
   padding: 0;
   margin: 0;
-}
-
-.cursor-pointer {
-  cursor: pointer;
 }
