--- a/src/core.css
+++ b/src/core.css
@@ -23,7 +23,7 @@
 }
 
 .bg-verde-200 {
-  background-color: var(--Verde-200);
+  background-color: var(--Verde-200) !important;
 }
 
 .bg-verde-500 {
